--- a/package.json
+++ b/package.json
@@ -5,23 +5,38 @@
   "main": "timing-attack.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "./node_modules/.bin/eslint  . *.js",
+    "lint:fix": "./node_modules/.bin/eslint  . *.js --fix",
     "start": "pm2 start server.js --watch",
     "start:mem-leak-check": "node --inspect app.js",
     "attack:brute-force": "python ./scripts/bruteForce.py http://127.0.0.1:3000/attacks/brute-force/ ./scripts/data/user.txt ./scripts/data/passListSmall.txt"
+  },
+  "config": {
+    "ghooks": {
+      "pre-push": "npm audit",
+      "pre-commit": "npm run lint"
+    }
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "https://github.com/kelektiv/node.bcrypt.js.git#master",
     "body-parser": "^1.18.3",
+    "eslint": "^5.6.0",
     "express": "^4.16.3",
     "express-rate-limit": "^3.2.0",
+    "ghooks": "^2.0.4",
     "http": "0.0.0",
     "install": "^0.12.1",
     "joi": "^13.6.0",
     "mongoose": "^5.2.17",
     "npm": "^6.4.1",
     "request": "^2.88.0",
-    "request-promise": "^4.2.2"
+    "request-promise": "^4.2.2",
+    "save-dev": "^2.0.0"
+  },
+  "devDependencies": {
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0"
   }
 }
