--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint:fix": "./node_modules/.bin/eslint  . *.js --fix",
     "start": "pm2 start server.js --watch",
     "start:mem-leak-check": "node --inspect app.js",
-    "attack:brute-force": "python ./scripts/bruteForce.py http://127.0.0.1:3000/attacks/brute-force/ ./scripts/data/user.txt ./scripts/data/passListSmall.txt"
+    "attack:brute-force": "python ./scripts/bruteForce.py http://127.0.0.1:3000/attacks/brute-force/ ./scripts/data/user.txt ./scripts/data/passListSmall.txt",
+    "users:insert":"node ./scripts/insertUsers.js"
   },
   "config": {
     "ghooks": {
